# webbedduck

./: .gitignore  AGENTS.md  BRANCH_CHANGELOG.md  METRICS.md  README.md  pyproject.toml
docs/: BRANCH_CHANGELOG.md  feature_comparison.md
examples/: __init__.py  request_constants.py
lessions_learned/: code_testing.md
lessons_learned/: code_refactoring.md  environment_setup.md  featrure_addition.md  refactor_point_selection.md  refactor_selection.md
reports/: baseline_lizard.txt  baseline_radon_cc.txt  baseline_radon_mi.txt  baseline_wily.txt  baseline_wily_report.txt  complexity_summary.txt  delta.json  summary.txt
scripts/: generate_template_docs.py
test_docs/: cache_invariants.md  cache_metadata_api_overview.md  cache_requirements.md  cache_route_metadata_examples.md  date_format_compact.md  date_format_day_month_name.md  date_format_dd_mm_yyyy.md  date_format_iso.md  date_format_iso8601.md  date_format_mm_dd_yy.md  date_format_month_name.md  date_format_rfc3339.md  date_format_yyyy_mm_dd.md  misc_active_bool.md  misc_optional_null.md  number_decimal.md  number_format_currency.md  number_format_decimal.md  number_format_integer.md  number_format_percent.md  number_format_scientific.md  number_percent.md  sql_round_trip.md  string_report_name.md  string_source_path.md  string_unapproved_blocked.md  template_metadata_dsl_reference.md  timestamp_format_iso.md  timestamp_format_iso8601.md  timestamp_format_rfc2822.md  timestamp_format_rfc3339.md  timestamp_format_unix.md  timestamp_format_unix_ms.md  timestamp_unix.md  timestamp_unix_ms.md
tests/: conftest.py  (+4 more)
(+72 files in other folders)
