[project]
name = "webbed_duck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "pyarrow",
    "fastapi>=0.110.0",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["webbed_duck"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.27",
    "radon>=6.0.1",
]
